# dnaFit

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTIONS.md  FitAnalyse.py  FitLinker.py  MANIFEST.in  MapSegement.py  README.md  VERSION  bDNA-cascade.py  bDNA.py  bDNA_cascade.py  basepair.py  bdna.py  bpLinker.py  constants.py  crossover.py  design.py  elastic_network.py  fit.py  linkage.py  linker.py  linkerUtil.py  pdbCorrection.py  pdb_correction_vmd-coot.py  project.py  pyproject.toml  requirements.txt  requirements_dev.txt  segmentation.py  setup.cfg  setup.py  toolsNB.py  utils.py  version.py  wc_pair-and-mdanalysis_universe-cascade.py  wc_pair-and-mdanalysis_universe.py  wc_pair.py  wc_pair_cascade.py
dnaFit/: __init__.py  setup.py  version.py
dnaFit/analysis/: __init__.py  bdna.py  segmentation.py  toolsNB.py
dnaFit/core/: mrDna.py  predict.py  utils.py
dnaFit/data/: basepair.py  bdna.py  crossover.py  design.py  fit.py  fit_project.py  mrc.py
dnaFit/fit/: __init__.py  atomic_model_fit.py  c-mrDNA-MDff-cascade.sh  c-mrDNA-MDff.txt  cascade.py  cascade_data.py  mrC_mdff.py
dnaFit/link/: elastic_network.py  linkage.py  linkage_pickle.py  linker.py  linker_project.py
dnaFit/pdb/: atom.py  files.py  structure.py  types.py  utils.py
dnaFit/resources/: c-mrDNA-MDff-cascade-SR.sh  c-mrDNA-MDff-cascade-sh.txt  c-mrDNA-MDff-cascade.sh  namd.txt  namd_film.txt  vmd_rot.txt
dnaFit/scripts/: FitAnalyse.py  FitLinker.py  MapSegement.py  dnafit.py
dnaFit/viewer/: viewer.py
setup_config/: base.cfg  generator.py
tests/: __init__.py
(+10 files in other folders)
