[metadata]
name = dnaFit
version = 0.8.1.dev0
description = Atomic model construction and analysis for lattice based DNAOrigami
long_description = file: README.md
long_description_content_type = text/markdown

author = Feigl, Elija
author_email = elija.feigl@tum.de
url = https://github.com/elija-feigl/DNA_Fit
project_urls =
    Github repository = https://github.com/elija-feigl/DNA_Fit

license = GPL-3
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: GNU General Public License Version 3
    Operating System :: OS Independent

[options]
include_package_data = True
packages =
    dnaFit
install_requires =
    numpy>=1.21.0
	click>=8.0.1
	mdanalysis>=1.1.1
	mrcfile>=1.3.0
	mrdna>=1.0a0.dev51
	nanodesign>=1.0
python_requires = >=3.8

zip_safe = no

[options.extras_require]
testing =
    flake8==3.9.2
	pytest==6.2.5
	pytest-cov==2.12.1
	mypy==0.910

[flake8]
max-line-length = 160

[options.package_data]
dnaFit = py.typed
